cmake_minimum_required(VERSION 3.16.4)
project(Bus)
option(BUS_SHARED_LIBRARY ON)

configure_file(BusSetup.h.in BusSetup.h)

if(BUS_SHARED_LIBRARY)
  add_compile_definitions(BUS_SHARED_EXPORT)
  if(CMAKE_COMPILER_IS_GNUCC)
    add_compile_options(-fvisibility=hidden)
  endif(CMAKE_COMPILER_IS_GNUCC)
  add_library(Bus SHARED Bus.c)
else()
  add_library(Bus Bus.c)
endif(BUS_SHARED_LIBRARY)
